--- a/colourFlipper/index.html
+++ b/colourFlipper/index.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>colour flipper</title>
+    <title>colour flipper || simple</title>
 </head>
 
 <body>
     <nav>
         <div class="nav-center">
             <h4>colour fipper</h4>
+            <ul class="nav-links">
+                <li>
+                    <a href="index.html">simple</a>
+                    <a href="hex.html">Hex</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
