added  click me btn

--- a/colourFlipper/index.html
+++ b/colourFlipper/index.html
@@ -15,11 +15,19 @@
             <ul class="nav-links">
                 <li>
                     <a href="index.html">simple</a>
+                </li>
+                <li>
                     <a href="hex.html">Hex</a>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <main>
+        <div class="container">
+            <button class="btn btn-hero" id="btn">click me</button>
+        </div>
+    </main>
 
     <script src="app.js"></script>
 </body>
