--- a/colourFlipper/index.html
+++ b/colourFlipper/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="nav-center">
-            <h4>colour fipper</h4>
+            <h4>colour flipper</h4>
             <ul class="nav-links">
                 <li>
                     <a href="index.html">simple</a>
