--- a/counterApp/index.html
+++ b/counterApp/index.html
@@ -17,6 +17,8 @@
             <span id="value">0</span>
             <div class="button-container">
                 <button class="btn decrease">decrease</button>
+                <button class="btn reset">reset</button>
+                <button class="btn increase">increase</button>
             </div>
         </div>
     </main>
