--- a/Review/index.html
+++ b/Review/index.html
@@ -14,7 +14,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
+    <main>
+        <section class="container">
+            <!-- title -->
+            <div class="title">
+                <h2>our reviews</h2>
+                <div class="underline"></div>
+            </div>
+        </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
