added review part in html

--- a/Review/index.html
+++ b/Review/index.html
@@ -21,6 +21,17 @@
                 <h2>our reviews</h2>
                 <div class="underline"></div>
             </div>
+            <!-- review -->
+            <article class="review">
+                <div class="img-container">
+                    <img src="./person-1.jpeg" id="person-img">
+                </div>
+                <h4 id="author">sara jones</h4>
+                <p id="job">UX designer</p>
+                <p id="info">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                </p>
+            </article>
         </section>
     </main>
     <!-- javascript -->
