updated html with complete code

--- a/Review/index.html
+++ b/Review/index.html
@@ -31,6 +31,17 @@
                 <p id="info">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                 </p>
+                <!-- prev next button -->
+                <div class="button-container">
+                    <button class="prev-btn">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <button class="next-btn">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                </div>
+                <!-- random button -->
+                <button class="randon-btn">suprise me </button>
             </article>
         </section>
     </main>
