typo fixing in html and created complete logic for app.js

--- a/Review/index.html
+++ b/Review/index.html
@@ -41,7 +41,7 @@
                     </button>
                 </div>
                 <!-- random button -->
-                <button class="randon-btn">suprise me </button>
+                <button class="random-btn">suprise me </button>
             </article>
         </section>
     </main>
