--- a/questions/index.html
+++ b/questions/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Q & A</title>
     <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <!-- extra fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet" />
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <h1>questions project</h1>
+</head>
+
+<body>
+    <section class="questions">
+        <div class="title">
+            <h2>
+                general questions
+            </h2>
+        </div>
+        <!--questions-->
+        <div class="section-center">
+            <!-- single question-->
+            <div class="question-title">
+                <article class="question">
+                    <p>Do DSA is hard or easy ?</p>
+                    <button type="button" class="question-btn">
+                        <span class="plus-icon">
+                         <i class="far fa-plus-square"></i>    
+                        </span> 
+                    </button>
+            </div>
+            </article>
+        </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
-  </body>
+</body>
+
 </html>
