--- a/questions/index.html
+++ b/questions/index.html
@@ -30,9 +30,39 @@
                         <span class="plus-icon">
                          <i class="far fa-plus-square"></i>    
                         </span> 
+                        <span class="minus-icon">
+                            <i class="far fa-minus-square"></i>
+                        </span>
                     </button>
             </div>
+            <div class="question-text">
+                <p>lorem ipsom dolorlorem ipsom dolorlorem ipsom dolorlorem ipsom dolor
+                    lorem ipsom dolorlorem ipsom dolorlorem ipsom dolor
+                    lorem ipsom dolorlorem ipsom dolor
+                </p>
+            </div>
             </article>
+
+            <article class="question">
+                <p>Do DSA is hard or easy ?</p>
+                <button type="button" class="question-btn">
+                    <span class="plus-icon">
+                     <i class="far fa-plus-square"></i>    
+                    </span> 
+                    <span class="minus-icon">
+                        <i class="far fa-minus-square"></i>
+                    </span>
+                </button>
+        </div>
+        <div class="question-text">
+            <p>lorem ipsom dolorlorem ipsom dolorlorem ipsom dolorlorem ipsom dolor
+                lorem ipsom dolorlorem ipsom dolorlorem ipsom dolor
+                lorem ipsom dolorlorem ipsom dolor
+            </p>
+        </div>
+        </article>
+
+        
         </div>
     </section>
     <!-- javascript -->
