--- a/questions/index.html
+++ b/questions/index.html
@@ -1,72 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Q & A</title>
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <!-- extra fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
-</head>
-
-<body>
-    <section class="questions">
+  </head>
+  <body>
+      <section class="questions">
+        <!-- title -->
         <div class="title">
-            <h2>
-                general questions
-            </h2>
+          <h2>general questions</h2>
         </div>
-        <!--questions-->
+        <!-- questions -->
         <div class="section-center">
-            <!-- single question-->
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
             <div class="question-title">
-                <article class="question">
-                    <p>Do DSA is hard or easy ?</p>
-                    <button type="button" class="question-btn">
-                        <span class="plus-icon">
-                         <i class="far fa-plus-square"></i>    
-                        </span> 
-                        <span class="minus-icon">
-                            <i class="far fa-minus-square"></i>
-                        </span>
-                    </button>
+              <p>do you accept all major credit cards?</p>
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
             </div>
+            <!-- question text -->
             <div class="question-text">
-                <p>lorem ipsom dolorlorem ipsom dolorlorem ipsom dolorlorem ipsom dolor
-                    lorem ipsom dolorlorem ipsom dolorlorem ipsom dolor
-                    lorem ipsom dolorlorem ipsom dolor
-                </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                repellat reprehenderit.
+              </p>
             </div>
-            </article>
-
-            <article class="question">
-                <p>Do DSA is hard or easy ?</p>
-                <button type="button" class="question-btn">
-                    <span class="plus-icon">
-                     <i class="far fa-plus-square"></i>    
-                    </span> 
-                    <span class="minus-icon">
-                        <i class="far fa-minus-square"></i>
-                    </span>
-                </button>
-        </div>
-        <div class="question-text">
-            <p>lorem ipsom dolorlorem ipsom dolorlorem ipsom dolorlorem ipsom dolor
-                lorem ipsom dolorlorem ipsom dolorlorem ipsom dolor
-                lorem ipsom dolorlorem ipsom dolor
-            </p>
-        </div>
-        </article>
-
-        
-        </div>
-    </section>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>do you suppport local farmers?</p>
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                repellat reprehenderit.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>do you use organic ingredients?</p>
+              <!-- button -->
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                dolore illo dolores quia nemo doloribus quaerat, magni numquam
+                repellat reprehenderit.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+      </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
